force-app/main/default/objects/FLODocs__FLO_Customization__c/FLODocs__FLO_Customization__c.object-meta.xml
<CustomObject>
    <description>This record is used to track customizations in the org and tie them to processes.</description>
    <label>Customization</label>
    <nameField>
        <label>Customization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>