force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Alert_Control_Owner__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Alert_Control_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to alert the owner of the control</description>
    <inlineHelpText>Check this box to alert the owner of the control</inlineHelpText>
    <label>Alert Control Owner</label>
    <type>Checkbox</type>
</CustomField>