force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Alert_Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Alert_Process_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox alerts the process owner whenever an incident is detected</description>
    <inlineHelpText>This checkbox alerts the process owner whenever an incident is detected</inlineHelpText>
    <label>Alert Process Owner</label>
    <type>Checkbox</type>
</CustomField>