force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Archive__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for automated cleanup</description>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>