force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Average_Runtime__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Average_Runtime__c</fullName>
    <description>Script Average Execution Time in milliseconds</description>
    <inlineHelpText>Script Average Execution Time in milliseconds</inlineHelpText>
    <label>Average Runtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>