force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Conditions__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Conditions__c</fullName>
    <description>These are the conditions in the workflow organized by stage or action.</description>
    <inlineHelpText>These are the conditions in the workflow organized by stage or action.</inlineHelpText>
    <label>Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>