force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Control_Type__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Control_Type__c</fullName>
    <description>This field is optional. Select Count to record the number</description>
    <inlineHelpText>This field is optional. Select Count to record the number</inlineHelpText>
    <label>Control Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOG</fullName>
            </value>
            <value>
                <fullName>ISSUE</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
            <value>
                <fullName>STORE DATA</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>