force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Customization_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Customization_Created_Date__c</fullName>
    <description>Created date of the Customization record.</description>
    <inlineHelpText>Created date of the Customization record.</inlineHelpText>
    <label>Customization Created Date</label>
    <type>DateTime</type>
</CustomField>