force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Customization_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Customization_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last user who has modified the customizaiton</description>
    <inlineHelpText>Last user who has modified the customizaiton</inlineHelpText>
    <label>Customization Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FLO_Customizations1</relationshipName>
    <type>Lookup</type>
</CustomField>