force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Data_Change_Tracking__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Data_Change_Tracking__c</fullName>
    <description>Valid only for CustomObject, CustomField, and CustomObject data records. Determines how changes to data records are handled by Strongpoint.</description>
    <inlineHelpText>Not Tracked: changes in data records are not tracked by Strongpoint
Tracked, Blocking: changes in data records are blocked if there is no approved Change Request
Tracked, Non-Blocking: changes in data records are logged by Strongpoint</inlineHelpText>
    <label>Data Change Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Tracked</fullName>
                <default>true</default>
                <label>Not Tracked</label>
            </value>
            <value>
                <fullName>Tracked, Blocking</fullName>
            </value>
            <value>
                <fullName>Tracked, Non-Blocking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>