force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__FLO_Scanner_Log__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__FLO_Scanner_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Strongpoint representation of a Metadata Type</description>
    <inlineHelpText>Lookup to the Strongpoint representation of a Metadata Type</inlineHelpText>
    <label>Scanner Log</label>
    <referenceTo>FLODocs__FLO_Scanner_Log__c</referenceTo>
    <relationshipLabel>Customizations</relationshipLabel>
    <relationshipName>FLO_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>