force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Is_Data_Tracking_Batch__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Is_Data_Tracking_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Standard Object is not triggerable and if Data Change Tracking is enabled. Data record changes cannot be triggered and must be processed via scheduled batch.</description>
    <inlineHelpText>Checked if the Standard Object is not triggerable and if Data Change Tracking is enabled. Data record changes cannot be triggered and must be processed via scheduled batch.</inlineHelpText>
    <label>Is Data Tracking Batch</label>
    <type>Checkbox</type>
</CustomField>