force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Namespace_Prefix__c</fullName>
    <description>Namespace for the Customization, if it is from a Managed Package/Unmanaged Package</description>
    <inlineHelpText>Namespace for the Customization, if it is from a Managed Package/Unmanaged Package</inlineHelpText>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>