force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Owner_Active__c</fullName>
    <description>This field show if the user who has created this Customization is active or not.</description>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field show if the user who has created this Customization is active or not.</inlineHelpText>
    <label>Owner Active</label>
    <type>Checkbox</type>
</CustomField>