force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Permisions__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Permisions__c</fullName>
    <description>User Permission for the Profile being read. It will store all User Permission enabled for the given profile</description>
    <inlineHelpText>User Permission for the Profile being read. It will store all User Permission enabled for the given profile</inlineHelpText>
    <label>Permisions</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>