force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Rescanner__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Rescanner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as information to Rescan the customization and evaluate the progress of Apex Batches to show &quot;In Progress&quot; in the FLO Customization</description>
    <inlineHelpText>Used as information to Rescan the customization and evaluate the progress of Apex Batches to show &quot;In Progress&quot; in the FLO Customization</inlineHelpText>
    <label>Rescanner</label>
    <type>Checkbox</type>
</CustomField>