force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Roles_using_this_customization__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Roles_using_this_customization__c</fullName>
    <description>This are the roles that are using this customization</description>
    <inlineHelpText>This are the roles that are using this customization</inlineHelpText>
    <label>Roles using this customization</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>