force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Scanner_Read__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Scanner_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate to Strongpoint if the Retrieve and the Customization was executed and read. This will change in any Scanner, it just internal information</description>
    <inlineHelpText>Checkbox to indicate to Strongpoint if the Retrieve and the Customization was executed and read. This will change in any Scanner, it just internal information</inlineHelpText>
    <label>Scanner Read</label>
    <type>Checkbox</type>
</CustomField>