force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Schedule_Type__c</fullName>
    <description>This is the schedule of the Workflow customization</description>
    <inlineHelpText>This is the schedule of the Workflow customization</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__FLO_Schedule_Type</valueSetName>
    </valueSet>
</CustomField>