force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Script_Average_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Script_Average_Run_Time__c</fullName>
    <description>This value is calculated from the execution logs if available.  If the standard audit logs are available, these are used.  If not, an attempt is made based on the existing debug logs.</description>
    <inlineHelpText>This value is calculated from the execution logs if available.  If the standard audit logs are available, these are used.  If not, an attempt is made based on the existing debug logs.</inlineHelpText>
    <label>Script Average Run Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>