force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Script_Fields__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Script_Fields__c</fullName>
    <description>These are the fields that appear in the relevant script file.</description>
    <inlineHelpText>These are the fields that appear in the relevant script file.</inlineHelpText>
    <label>Script Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>