force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Scripted__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Scripted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scripted</label>
    <type>Checkbox</type>
</CustomField>