force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Searches__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Searches__c</fullName>
    <description>These are the searches that depend upon this field.</description>
    <inlineHelpText>These are the searches that depend upon this field.</inlineHelpText>
    <label>Reports / Searches / Dashboards</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>