force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Security_Classification__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Security_Classification__c</fullName>
    <label>Security Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>