force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Trigger_Type__c</fullName>
    <description>This is the trigger type of the Workflow customization</description>
    <inlineHelpText>This is the trigger type of the Workflow customization</inlineHelpText>
    <label>Trigger Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>