force-app/main/default/objects/FLODocs__FLO_Customization__c/fields/FLODocs__Workflows__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Workflows__c</fullName>
    <description>These are the workflows related to this customization.</description>
    <inlineHelpText>These are the workflows related to this customization.</inlineHelpText>
    <label>Workflows/Approvals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>