force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Extended.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Extended</fullName>
    <active>true</active>
    <description>This Record type will be for types such as FieldSet, WavesFields, Territory, etc.</description>
    <label>Extended</label>
</RecordType>