force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Form.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Form</fullName>
    <active>false</active>
    <description>This Record type will be for types such as Page Layout, List View, CompactLayout,etc.</description>
    <label>Form</label>
</RecordType>