force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Objects_Fields.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Objects_Fields</fullName>
    <active>true</active>
    <description>This Record type will be for types such as CustomField, CustomObject, Articles, CustomMetadata, CustomSetting</description>
    <label>Objects &amp; Fields</label>
</RecordType>