force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Other.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Other</fullName>
    <active>true</active>
    <description>This Record type will be for all Types in the organization that they&apos;re not Script, Workflow, Report, etc families.</description>
    <label>Other</label>
</RecordType>