force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Profile_Roles.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Profile_Roles</fullName>
    <active>true</active>
    <description>This Record type will be for types such as Profile, Roles, PermissionSet, etc.</description>
    <label>Profile &amp; Roles</label>
</RecordType>