force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Report.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Report</fullName>
    <active>true</active>
    <description>This Record type will be for types such as Report, ReportType, Searches, etc.</description>
    <label>Report</label>
</RecordType>