force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Script.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Script</fullName>
    <active>true</active>
    <description>This Record type will be for types such as ApexClass, ApexPage, ApexTrigger, etc.</description>
    <label>Script</label>
</RecordType>