force-app/main/default/objects/FLODocs__FLO_Customization__c/recordTypes/FLODocs__Workflows_Approvals.recordType-meta.xml
<RecordType>
    <fullName>FLODocs__Workflows_Approvals</fullName>
    <active>true</active>
    <description>This Record type will be for types such as Workflow, Flow, ApprovalProcess, etc.</description>
    <label>Workflows &amp; Approvals</label>
</RecordType>