force-app/main/default/objects/FLODocs__FLO_Customization__c/listViews/FLODocs__Customization_Impact_Search_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Customization_Impact_Search_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Salesforce_Types__c</columns>
    <columns>FLODocs__Customization_Last_Modified_By__c</columns>
    <columns>FLODocs__Searches__c</columns>
    <columns>FLODocs__Forms__c</columns>
    <columns>FLODocs__Scripts__c</columns>
    <columns>FLODocs__Workflows__c</columns>
    <columns>FLODocs__Extended_Types_Other__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Namespace_Prefix__c</field>
        <operation>equals</operation>
    </filters>
    <label>Customization Impact Search (v2)</label>
</ListView>