force-app/main/default/objects/FLODocs__FLO_Customization__c/listViews/FLODocs__Default_Clean_Up_List_View_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Default_Clean_Up_List_View_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Parent__c</columns>
    <columns>FLODocs__Date_Last_Used__c</columns>
    <columns>FLODocs__Clean_up_Classification__c</columns>
    <columns>FLODocs__Clean_up_Status__c</columns>
    <columns>FLODocs__Searches__c</columns>
    <columns>FLODocs__Scripts__c</columns>
    <columns>FLODocs__Workflows__c</columns>
    <columns>FLODocs__Forms__c</columns>
    <columns>FLODocs__Data_Source_es__c</columns>
    <columns>FLODocs__Roles_using_this_customization__c</columns>
    <columns>FLODocs__Add_to_Change_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FLODocs__FLO_Customization__c.FLODocs__Objects_Fields</value>
    </filters>
    <filters>
        <field>FLODocs__Salesforce_Types__c</field>
        <operation>equals</operation>
        <value>CustomField</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>(Standard:</value>
    </filters>
    <filters>
        <field>FLODocs__Date_Last_Used__c</field>
        <operation>greaterThan</operation>
        <value>N_DAYS_AGO:180</value>
    </filters>
    <label>Default Clean Up List View (v2)</label>
</ListView>