force-app/main/default/objects/FLODocs__FLO_Customization__c/listViews/FLODocs__Objects_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Objects_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Description__c</columns>
    <columns>FLODocs__Data_Change_Tracking__c</columns>
    <columns>FLODocs__Date_Last_Used__c</columns>
    <columns>FLODocs__Customization_Last_Modified_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Salesforce_Types__c</field>
        <operation>equals</operation>
        <value>CustomObject</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FLODocs__FLO_Customization__c.FLODocs__Objects_Fields</value>
    </filters>
    <label>Custom &amp; Standard Objects (v2)</label>
</ListView>