force-app/main/default/objects/FLODocs__FLO_Customization__c/listViews/FLODocs__Unused_Custom_Fields_v3.listView-meta.xml
<ListView>
    <fullName>FLODocs__Unused_Custom_Fields_v3</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Customization_Created_By__c</columns>
    <columns>FLODocs__Records__c</columns>
    <columns>FLODocs__Populate__c</columns>
    <columns>FLODocs__Date_Last_Used__c</columns>
    <columns>FLODocs__Parent_Last_Update_Date__c</columns>
    <columns>FLODocs__Search_Filters__c</columns>
    <columns>FLODocs__Scripts__c</columns>
    <columns>FLODocs__Workflows__c</columns>
    <columns>FLODocs__Clean_up_Classification__c</columns>
    <columns>FLODocs__Clean_up_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Salesforce_Types__c</field>
        <operation>equals</operation>
        <value>CustomField</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FLODocs__FLO_Customization__c.FLODocs__Objects_Fields</value>
    </filters>
    <label>Unused Custom Fields (v3)</label>
</ListView>