force-app/main/default/objects/FLODocs__FLO_Customization__c/listViews/FLODocs__Unused_Reports_Scripts_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Unused_Reports_Scripts_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__ScriptId__c</columns>
    <columns>FLODocs__Clean_up_Classification__c</columns>
    <columns>FLODocs__Improvement_Comments__c</columns>
    <columns>FLODocs__Clean_up_Status__c</columns>
    <columns>FLODocs__Salesforce_Types__c</columns>
    <columns>FLODocs__Data_Source_es__c</columns>
    <columns>FLODocs__Extended_Types_Other__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Salesforce_Types__c</field>
        <operation>equals</operation>
        <value>ApexClass,ApexComponent,ApexPage,ApexTrigger,Report</value>
    </filters>
    <filters>
        <field>FLODocs__Date_Last_Used__c</field>
        <operation>lessThan</operation>
        <value>LAST_QUARTER</value>
    </filters>
    <label>Unused Reports &amp; Scripts (v2)</label>
</ListView>